added welcome msg and some more styling

--- a/index.html
+++ b/index.html
@@ -11,18 +11,23 @@
 <body>
     <div class="container">
         <div id="question-container" class="hide">
-        <div id="question">Question</div>
-        <div id="answer-buttons" class="btn-grid">
+            <div id="question">Question</div>
+          <div id="answer-buttons" class="btn-grid">
             <button class="btn">Answer 1</button>
             <button class="btn">Answer 2</button>
             <button class="btn">Answer 3</button>
             <button class="btn">Answer 4</button>
             </div>
+        
         </div>
-    <div class="controls">
-    <button id="start-btn" class="start-btn btn">Start</button>
-    <button id="next-btn" class="nexr-btn btn hide">Next</button>
-    </div>
+        <div id="welcome">
+        <h1>Welcome to my Coding Quiz</h1><br>
+        <p>This quiz is to test you on the skills from Module 4 of the Georgia Tech Coding Bootcamp</p>
+        <p class="start-msg">Click the Start button to begin</p></div>
+     <div class="controls">
+        <button id="start-btn" class="start-btn btn">Start</button>
+        <button id="next-btn" class="nexr-btn btn hide">Next</button>
+     </div>
     </div>
 </body>
 </html>
