Timer and decreses when selecting wrong answer

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Coding Quiz</title>
 </head>
 <body>
+    <div id="timer" class="timer"></div>
     <div class="container">
         <div id="question-container" class="hide">
             <div id="question">Question</div>
